[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/SpaceShipBG.png" type="Texture" id=1]
[ext_resource path="res://Assets/SpaceShip.png" type="Texture" id=2]
[ext_resource path="res://Assets/Shield1.png" type="Texture" id=3]
[ext_resource path="res://Assets/ThrusterBase.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Ship1.gd" type="Script" id=5]
[ext_resource path="res://Assets/PoofParticles.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=7]
[ext_resource path="res://Assets/Torrent1Gun.png" type="Texture" id=8]
[ext_resource path="res://Assets/Torrent1Base.png" type="Texture" id=9]
[ext_resource path="res://DebugCanvas.gd" type="Script" id=10]
[ext_resource path="res://Assets/TurrentRocketBaseStrip_strip2.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 402.019

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.290323, 0.939068 )
colors = PoolColorArray( 0.980392, 0.619608, 0.619608, 1, 0.419608, 0.509804, 0.580392, 0.0588235, 1, 1, 1, 0.505882 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.989247, 1 )
colors = PoolColorArray( 0.882353, 0.776471, 0.356863, 1, 0.631373, 0.631373, 0.631373, 0.635294, 1, 1, 1, 0.141176 )

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.976471, 0.447059, 0.945098, 1 ), Color( 1, 0.443137, 0.560784, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.427451, 0.427451, 1 ), Color( 0.988235, 0.0901961, 0.0901961, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RigidBody2D" type="RigidBody2D" groups=[
"Player",
]]
collision_layer = 9
collision_mask = 9
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -10
shape = SubResource( 1 )

[node name="ShieldRotation" type="Node2D" parent="."]
z_index = -10

[node name="Shield" type="Sprite" parent="ShieldRotation"]
position = Vector2( 410, 0 )
rotation = 0.00325928
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="ShieldRotation/Shield" groups=[
"Player",
]]
script = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShieldRotation/Shield/Area2D"]
polygon = PoolVector2Array( 2.32047, 0.158237, 93.9317, 9.35342, 43.5285, 39.6635, 88.4827, 83.9366, 35.0246, 101.053, 31.6118, 106.741, 70.5959, 150.495, 15.764, 159.319, 12.6128, 166.252, 39.7136, 210.999, -10.7065, 211.63, -18.8997, 222.974, -92.0088, 171.294, -44.1097, 35.7897, -51.0425, -48.0336, -84.4457, -164, -28.9837, -220.722, -13.8577, -199.924, 42.8649, -195.512, 13.8734, -148.874, 15.1339, -141.941, 71.8564, -125.554, 34.6716, -90.2604, 37.8229, -78.2856, 88.8729, -53.0757, 44.1251, -22.1934, 44.1251, -17.7817, 94.5452, 8.68886 )

[node name="EngineRotation" type="Node2D" parent="."]
rotation = 1.56296
z_index = -7

[node name="Engine" type="Sprite" parent="EngineRotation"]
position = Vector2( 433.016, 0 )
texture = ExtResource( 4 )

[node name="EngineParticles" type="CPUParticles2D" parent="EngineRotation/Engine"]
position = Vector2( 80.9316, -12.2434 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
amount = 30
speed_scale = 1.82
local_coords = false
draw_order = 1
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 59.52
direction = Vector2( 1.272, 0 )
spread = 80.54
gravity = Vector2( 4.816, 0 )
initial_velocity = 165.61
linear_accel = 24.2
damping = 80.89
damping_random = 0.54
scale_amount = 0.75
scale_amount_random = 0.93
color_ramp = SubResource( 2 )
hue_variation = 0.22
hue_variation_random = 0.31

[node name="EngineBurstParticles" type="CPUParticles2D" parent="EngineRotation/Engine"]
position = Vector2( 80.9316, -12.2434 )
scale = Vector2( 0.75, 0.25 )
z_index = -3
emitting = false
amount = 50
one_shot = true
speed_scale = 1.82
local_coords = false
draw_order = 1
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 87.24
spread = 85.13
gravity = Vector2( 0, 0 )
initial_velocity = 560.52
linear_accel = 24.2
damping = 7.64
damping_random = 0.37
scale_amount = 0.5
scale_amount_random = 0.93
color_ramp = SubResource( 3 )
hue_variation = 0.22
hue_variation_random = 0.31

[node name="EngineDirection" type="Position2D" parent="EngineRotation"]
position = Vector2( -400, 0 )

[node name="BG" type="Sprite" parent="."]
z_index = -5
texture = ExtResource( 1 )

[node name="FG" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Torrent1Base" type="Sprite" parent="."]
modulate = Color( 0.572549, 0.278431, 1, 1 )
position = Vector2( 0, -422.89 )
rotation = 0.0174533
z_index = -6
texture = ExtResource( 9 )

[node name="Torrent1Gun" type="Sprite" parent="Torrent1Base"]
position = Vector2( 0, -33.361 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( 0, -40 )

[node name="Position2D" type="Position2D" parent="Torrent1Base/Torrent1Gun"]
position = Vector2( -2.49858, -92.5788 )

[node name="Torrent1ShotTime" type="Timer" parent="Torrent1Base"]
wait_time = 0.15

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 4, 4 )

[node name="Timers" type="Node" parent="."]

[node name="ParticleBurstTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="BurstTimer" type="Timer" parent="Timers"]

[node name="DebugCanvas" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="FPSReadout" type="Label" parent="DebugCanvas"]
margin_left = 975.087
margin_top = 12.313
margin_right = 1015.09
margin_bottom = 26.313
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessReadout" type="Label" parent="DebugCanvas"]
margin_left = 848.542
margin_top = 8.35961
margin_right = 898.542
margin_bottom = 39.3596
text = "Process
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectReadout" type="Label" parent="DebugCanvas"]
margin_left = 940.342
margin_top = 49.7604
margin_right = 983.342
margin_bottom = 80.7604
text = "Object
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TorrentLeftPosition" type="Position2D" parent="."]
position = Vector2( -422.699, 3.34035 )
z_index = -6

[node name="Sprite" type="Sprite" parent="TorrentLeftPosition"]
rotation = 0.152061
texture = ExtResource( 11 )
flip_h = true
hframes = 2

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 0, 402.277 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/OnHit = SubResource( 4 )
[connection signal="area_entered" from="ShieldRotation/Shield/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Torrent1Base/Torrent1ShotTime" to="." method="_on_Torrent1ShotTime_timeout"]
[connection signal="timeout" from="Timers/ParticleBurstTimer" to="." method="_on_ParticleBurstTimer_timeout"]
[connection signal="timeout" from="Timers/BurstTimer" to="." method="_on_BurstTimer_timeout"]
